--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,8 @@
-VITE_API_BASE_URL=http://localhost:8088
+# =========================
+# API CONFIG
+# =========================
+VITE_API_URL=http://localhost:8088
+
+# ใช้ user id ที่มีจริงใน DB
+# alice = 1, bob = 2
+VITE_FORCE_USER_ID=1
